<resources  tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" >Elk Deals</string>
    <string name="splash">شاشة البدء</string>
    <string name="email">البريد الالكترونى</string>
    <string name="fullname">الاسم بالكامل</string>
    <string name="phone">الهاتف</string>
    <string name="login">تسجيل الدخول</string>
    <string name="register">تسجيل حساب</string>
    <string name="confirmation_code_will_be_sent">سوف يتم ارسال كود تأكيد الى رقم هاتفك</string>
    <string name="fill_your_information">املأ بيانانتك</string>
    <string name="enter_phone">ادخل رقم الهاتف</string>
    <string name="password">كلمة السر</string>
    <string name="confirm">تأكيد</string>
    <string name="enter_confirmation_code">ادخل رمز التأكيد</string>
    <string name="waiting_confirmation_code">فى انتظار رمز التأكيد</string>
    <string name="confirmation_code">رمز التأكيد</string>
    <string name="name">الاسم</string>
    <string name="message">الرسالة</string>
    <string name="ok">موافق</string>
    <string name="cancel">الغاء</string>
    <string name="name_activity_main">الشاشة الرئيسية</string>
    <string name="navigation_drawer_open">فتح القائمة الجانبية</string>
    <string name="navigation_drawer_close">غلق القائمة الجانبية</string>
    <string name="action_settings">الاعدادات</string>
    <string name="name_activity_notifications">الاشعارات</string>
    <string name="mobile">الهاتف</string>
    <string name="home_appliances">الاجهزة المنزلية</string>
    <string name="computing">الحواسيب</string>
    <string name="fashion">الموصة</string>
    <string name="cart">السلة</string>
    <string name="checkout">دفع</string>
    <string name="appliance">الاجهزة المنزلية</string>
    <string name="cards">البطاقات</string>
    <string name="cars">السيارات</string>
    <string name="phones">الهواتف المحمولة</string>
    <string name="laptops">اللابتوبات</string>
    <string name="choose_category">اختر نوع</string>
    <string name="faq">الاسئلة الشائعة</string>
    <string name="bills">الفواتير</string>
    <string name="wallet">المحفظة</string>
    <string name="home">الشاشة الرئيسية</string>
    <string name="offers">العروض</string>
    <string name="prev_auctions">المزادات السابقة</string>
    <string name="number_confirmation">تأكيد رقم الهاتف</string>
    <string name="your_number">رقم هاتفك هو : </string>
    <string name="edit">تعديل</string>
    <string name="auctions">المزادات</string>
    <string name="auction">المزاد</string>
    <string name="requests">الطلبات</string>
    <string name="store">المتجر</string>
    <string name="welcome">مرحبا,</string>
    <string name="terms">الأحكام والشروط</string>
    <string name="contract">العقد</string>
    <string name="seller">البائع : </string>
    <string name="quantity">الكمية : </string>
    <string name="note">ملاحظة : </string>
    <string name="unit_price">سعر الوحدة : </string>
    <string name="sub_total">المجموع</string>
    <string name="add_more_products">اضف المزيد من المنتجات</string>
    <string name="view_more">عرض المزيد</string>
    <string name="question">الاسئلة</string>
    <string name="details">التفاصيل</string>
    <string name="start">بدء</string>
    <string name="bidding">المزايدة</string>
    <string name="pay_now">ادفع الان</string>
    <string name="bill_number">رقم الفاتورة : </string>
    <string name="status">الحالة : </string>
    <string name="date">التاريخ : </string>
    <string name="delivery">التوصيل</string>
    <string name="discount">الخصم</string>
    <string name="total">المجموع الكلى</string>
    <string name="shipping_fees">مصاريف الشخن</string>
    <string name="view">عرض</string>
    <string name="categories">الاقسام</string>
    <string name="id_number">رقم البطاقة</string>
    <string name="credit">الرصيد</string>
    <string name="address">العنوان</string>
    <string name="additional_discounts">خصومات اضافية</string>
    <string name="searching_in">جار البحث فى…</string>
    <string name="condition">الحالة</string>
    <string name="end_of_offers">لا يوجد المزيد من العروض</string>
    <string name="search">بحث</string>
    <string name="not_paid">غير مدفوعة</string>
    <string name="client_name">اسم العميل</string>
    <string name="monthly_installment">القسط الشهرى</string>
    <string name="installments">الاقساط</string>
    <string name="city">المحافظة</string>
    <string name="save">حفظ</string>
    <string name="loading">جار التحميـــل…</string>
    <string name="watch_the_video_to_know_how_to_get_it">شاهد الفيديو لتعرف طريقة المزايدة !</string>
    <string name="start_bidding">بدء المزايدة</string>
    <string name="code">الكود</string>
    <string name="market_price">سعر السوق</string>
    <string name="bid_started_at">تبدأ المزايدة فى </string>
    <string name="entry_fee">رسوم الاشتراك</string>
    <string name="number_months">عدد الاشهر</string>
    <string name="max_installment_months">الحد الاقصى للقسط الشهرى</string>
    <string name="insurance">التأمين</string>
    <string name="sale_restriction">حظر البيع</string>
    <string name="subscribers_percentage">النسبة المئوية لاكتمال عدد المشتركين </string>
    <string name="view_product_specefications">عرض تفاصيل المنتج</string>
    <string name="view_auction_specefications">عرض تفاصيل المزاد</string>
    <string name="edit_information">تعديل بياناتك</string>
    <string name="brand">الماركة</string>
    <string name="in_stock">فى المخزن</string>
    <string name="view_less">عرض اقل</string>
    <string name="transfer">تحويل</string>
    <string name="balance_transfer">تحويل الرصيد</string>
    <string name="amount">المبلغ</string>
    <string name="order_status">حالة الطلب</string>
    <string name="wallet_number">رقم المحفظة</string>
    <string name="transfer_money">تحويل المال</string>
    <string name="add_to_cart">اضف الى السلة</string>
    <string name="no_video_found">لا يوجد فيديو</string>
    <string name="bill_status">حالة الفاتورة</string>
    <string name="method">طريقة الدفع</string>
    <string name="bank">البنك</string>
    <string name="bank_branch">الفرع</string>
    <string name="account_number">رقم الحساب</string>
    <string name="remove">حذف</string>
    <string name="pay">ادفع</string>
    <string name="choose_your_preferred_payment_method">اختر طريقة الدفع المفضلة</string>
    <string name="discount_with_code">خصم عن طريق الكود</string>
    <string name="attach_payment_reciept">ارفاق فاتورة دفع</string>
    <string name="no_value">لا يوجد</string>
    <string name="years">سنوات</string>
    <string name="bid_started_from">تبدأ المزايدة من</string>
    <string name="month">شهر</string>
    <string name="egp">جنيه</string>
    <string name="max_number_of_installments_months">الحد الاقصى لعدد شهور القسط</string>
    <string name="paid">تم الدفع</string>
    <string name="off">OFF</string>
    <string name="item_added_to_cart">تمت اضافة المنتج</string>
    <string name="reached_max_stock">لقد طلبت كل الكمية الموجودة بالفعل</string>
    <string name="you_can_remove_product">لا يمكن طلب عدد اقل من واحد يمكنك حذف المنتج اذا اردت</string>
    <string name="actionOrders">طلباتى</string>
    <string name="error">خطأ ما حدث</string>
    <string name="no_of_products">عدد المنتجات</string>
    <string name="order_id">رقم الطلب</string>
    <string name="checkout_price">المبلغ المطلوب</string>
    <string name="order_date">تاريخ الطلب</string>
    <string name="record_not_found">لا يوجد بيانات</string>
    <string name="orders">طلباتى</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="payment_method">طريقة الدفع</string>
    <string name="billing_address">عنوان الفاتورة</string>
    <string name="shipping_address">عنوان الشحن</string>
    <string name="tax">الضرائب</string>
    <string name="shipping">الشحن</string>
    <string name="products">المنتجات</string>
    <string name="shipping_method">طريقة الشحن</string>
    <string name="order_notes">ملاحظات الطلب</string>
    <string name="attribute_name">الاسم</string>
    <string name="product_price">سعر المنتج</string>
    <string name="product_title">اسم المنتج</string>
    <string name="category">القسم</string>
    <string name="product">المنتج</string>
    <string name="coupon">كود خصم</string>
    <string name="coupon_code">كود الخصم</string>
    <string name="coupon_amount">قيمة الخصم</string>
    <string name="coupon_discount">خصم الكوبون</string>
    <string name="coupon_type">نوع الكود</string>
    <string name="country">البلد</string>
    <string name="unexpected_response">حدث خطأ ما</string>
    <string name="cannot_get_payment_methods">cannot_get_payment_methods</string>
    <string name="thank_you">شكرأ لتسوقك معنا</string>
    <string name="reload">لاتوجد بيانات,إعادة التحميل</string>
    <string name="addresses">عناوين الشحن</string>
    <string name="update_address">تحديث العنوان</string>
    <string name="new_address">عنوان جديد</string>
    <string name="invalid_first_name">الاسم الاول خطأ</string>
    <string name="invalid_last_name">الاسم الثانى خطأ</string>
    <string name="select_country">اختر البلد</string>
    <string name="invalid_address">خطأ فى العنوان</string>
    <string name="enter_city">ادخل المنطقة</string>
    <string name="select_zone">اختر المحافظة</string>
    <string name="zone">المحافظة</string>
    <string name="first_name">الاسم الاول</string>
    <string name="default_shipping">عنوان الشحن الافتراضى</string>
    <string name="save_address">حفظ العنوان</string>
    <string name="last_name">الاسم الاخير</string>
    <string name="search_product_by_name">ابحث بالاسم</string>
    <string name="confirm_order_to_address">تأكيد الطلب وعنوان الشحن   </string>
    <string name="create_inv">عمل فاتورة لكل مزاد</string>
    <string name="create_auctions_first">اشترك فى المزادات اولا</string>
    <string name="sell_with_us">انضم الينا</string>
    <string name="confirm_sell_with_us">تأكيد الاشتراك  بهذه الاقسام</string>
    <string name="select_none">الغاء الاختيار</string>
    <string name="select_all">اختيار الكل</string>
    <string name="next">التالى</string>
    <string name="send_offer">ارسال العرض</string>
    <string name="delivery_time">مدة التوصيل</string>
    <string name="price">السعر</string>
    <string name="day">يوم</string>
    <string name="selct_category_first">الرجاء اختيار الاقسام اولا</string>
    <string name="confirm_address">تاكيد العنوان</string>
    <string name="resend_code">اعادة ارسال كود الارسال</string>
    <string name="no_categories_found">لا يوجد اقسام حاليا</string>
    <string name="seller_registered_successfully">تم تسجيلك كتاجر بنجاح,قم بالرد على طلبات العملاء الان</string>
    <string name="unregisted_seller_successfully">تم الغاء تسجيلك كتاجر نتمنى عودتك مرة اخرى</string>
    <string name="submit_seller_data">التالى</string>
    <string name="see_requests">طلبات العملاء</string>
    <string name="store_blocked">لقد تم الغاء تفعيل حسابك او تم حظرك من السوق ائا كنت تعتقد ان هناك خطأ ما يمكنك التحدث لخدمة العملاء</string>
    <string name="request_offers">عدد العروض</string>
    <string name="customers_requests">طلبات العملاء</string>
    <string name="my_requests">طلباتى</string>
    <string name="make_offer">قدم عرض</string>
    <string name="make_request">ارسال الطلب</string>
    <string name="select_status_new_old">من فضلك اختار حالة المنتج جديد او مستعمل اوكلا الحالتين</string>
    <string name="enter_title">من فضلك ادخل اسم المنتج</string>
    <string name="enter_description">من فضلك ادخل وصف المنتج او التفاصيل</string>
    <string name="request_sent_successfully">تم ارسال طلبك بنجاح</string>
    <string name="offer_not_sent_successfully">فشل ارسال العرض</string>
    <string name="offer_sent_successfully">تم ارسال العرض بنجاح</string>
    <string name="accept_offer">اقبل العرض</string>
    <string name="accept_offer_confirmation">تأكيد قبول العرض</string>
    <string name="continue_shopping"> مواصلة التسوق </string>
    <string name="thank_you_for_shopping"> شكرا للتسوق معنا! </string>
</resources>