<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splash"
        android:scaleType="centerCrop"
        android:tint="#B3000C17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_dark" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:letterSpacing="0.1"
        android:text="@string/enter_phone"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toTopOf="@+id/phone_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <FrameLayout
        android:id="@+id/phone_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/rounded_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mobile"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone"
            android:imeOptions="actionDone"
            android:maxLength="11"
            android:inputType="phone"
            android:lines="1"
            android:maxLines="1"
            android:scrollHorizontally="true"
            tools:text="01015605653" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:letterSpacing="0.1"
        android:text="@string/confirmation_code_will_be_sent"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_input"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:letterSpacing="0.1"
        android:text="@string/login"
        android:textColor="#e5e5e5"
        android:textSize="@dimen/_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>