<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.account.Notifications">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/name_activity_notifications"
        android:textColor="@color/colorPrimaryDarkAuctions"
        android:textSize="@dimen/_14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:background="#7c7c7c" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler"
            tools:itemCount="12"
            tools:listitem="@layout/recycler_notification"
            android:visibility="visible"/>
        <LinearLayout
            android:id="@+id/reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/reloadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_logo_error"/>
            <TextView
                android:id="@+id/reloadText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawableTop="@android:drawable/ic_menu_rotate"
                android:text="@string/reload"
                android:textSize="@dimen/_18sp"
                android:textColor="@color/colorPrimarySecondary"/>
        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_address"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp"
            android:padding="@dimen/_10sdp"
            android:background="@color/colorAccentRequests"
            android:visibility="visible" />
        <TextView
            android:id="@+id/confirm_order_to_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order_to_address"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp"
            android:padding="@dimen/_10sdp"
            tools:visibility="visible"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorAccentRequests"
            android:visibility="gone"/>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>