<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000C17"
    tools:context=".ui.splash.PhoneConfirmCode">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splash"
        android:scaleType="centerCrop"
        android:tint="#B3000C17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_dark" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:letterSpacing="0.1"
        android:text="@string/enter_confirmation_code"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toTopOf="@+id/code_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <FrameLayout
        android:id="@+id/code_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_80sdp"
        android:layout_marginEnd="@dimen/_80sdp"
        android:background="@drawable/rounded_input"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/code"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirmation_code"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="false" />
    </FrameLayout>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1000"
        android:maxLines="1"
        android:singleLine="false"
        android:textColor="@color/colorAccentRequests"
        app:layout_constraintTop_toBottomOf="@+id/code_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/confirm"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:letterSpacing="0.1"
        android:text="@string/confirm"
        android:textColor="#e5e5e5"
        android:textSize="@dimen/_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>